--- a/engine_baseline_strategy_dopam.videoapp.json
+++ b/engine_baseline_strategy_dopam.videoapp.json
@@ -98,7 +98,7 @@
 	],
 	"coldstart_strategy": [{
 		"name": "gamer coldstart",
-		"codition": {
+		"condition": {
 			"apps": {
 				"include": [],
 				"exclude": []
