增加device和hour的冷启动支持

--- a/engine_baseline_strategy_dopam.videoapp.testenv.json
+++ b/engine_baseline_strategy_dopam.videoapp.testenv.json
@@ -106,6 +106,14 @@
 			"location": {
 				"include": [],
 				"exclude": []
+			},
+			"device":{
+				"include": [],
+				"exclude": []
+			},
+			"hour":{
+				"include": [],
+				"exclude": []
 			}
 		},/*end of condition*/
 		"override_blending_strategy": [{
