--- a/engine_baseline_strategy_dopam.videoapp.testenv.json
+++ b/engine_baseline_strategy_dopam.videoapp.testenv.json
@@ -3,7 +3,7 @@
 			"channel": "rcmd",
 			"category": [{
 					"id": 0,
-					"category": "历史",
+					"category": ["历史"],
 					"count": 1,
 					"max_count": 5,
 					"source": ["baidu_news"],
@@ -11,7 +11,7 @@
 				},
 				{
 					"id": 1,
-					"category": "法制",
+					"category": ["法制"],
 					"count": 1,
 					"max_count": 5,
 					"source": ["baidu_news"],
@@ -19,15 +19,15 @@
 				},
 				{
 					"id": 2,
-					"category": "国际",
+					"category": ["国际"],
 					"count": 2,
 					"max_count": 5,
-					"source": ["baidu_news"],
+					"source": ["sohu_news"],
 					"flags": {}
 				},
 				{
 					"id": 3,
-					"category": "军事",
+					"category": ["军事"],
 					"count": 2,
 					"max_count": 5,
 					"source": ["baidu_news"],
@@ -35,7 +35,7 @@
 				},
 				{
 					"id": 4,
-					"category": "社会",
+					"category": ["社会"],
 					"count": 1,
 					"max_count": 5,
 					"source": ["baidu_news"],
@@ -43,7 +43,7 @@
 				},
 				{
 					"id": 5,
-					"category": "健康",
+					"category": ["健康"],
 					"count": 1,
 					"max_count": 5,
 					"source": ["baidu_news"],
@@ -51,7 +51,7 @@
 				},
 				{
 					"id": 6,
-					"category": "国际",
+					"category": ["国际", "军事", "历史"],
 					"count": 2,
 					"max_count": 5,
 					"source": ["baidu_video"],
@@ -63,7 +63,7 @@
 			"channel": "video",
 			"category": [{
 					"id": 0,
-					"category": "历史",
+					"category": ["历史"],
 					"count": 1,
 					"max_count": 5,
 					"source": ["baidu_video"],
@@ -71,7 +71,7 @@
 				},
 				{
 					"id": 1,
-					"category": "法制",
+					"category": ["法制"],
 					"count": 1,
 					"max_count": 5,
 					"source": ["baidu_video"],
@@ -79,7 +79,7 @@
 				},
 				{
 					"id": 2,
-					"category": "国际",
+					"category": ["国际"],
 					"count": 2,
 					"max_count": 5,
 					"source": ["baidu_video"],
@@ -87,7 +87,7 @@
 				},
 				{
 					"id": 3,
-					"category": "军事",
+					"category": ["军事"],
 					"count": 2,
 					"max_count": 5,
 					"source": ["baidu_video"],
@@ -97,10 +97,10 @@
 		}/*end of rcmd channel*/
 	],
 	"coldstart_strategy": [{
-		"name": "gamer coldstart",
+		"name": "coldstart_test",
 		"condition": {
 			"apps": {
-				"include": [],
+				"include": ["com.tencent.tmgp.pubgmhd", "com.tencent.tmgp.sgame"],
 				"exclude": []
 			},
 			"location": {
@@ -120,10 +120,10 @@
 				"channel": "rcmd",
 				"category": [{
 						"id": 5,
-						"category": "健康",
-						"count": 1,
+						"category": ["游戏", "漫画"],
+						"count": 3,
 						"max_count": 5,
-						"source": ["baidu_news"],
+						"source": ["baidu_video", "baidu_news"],
 						"flags": {}
 					},
 					{
@@ -136,7 +136,7 @@
 				"channel": "video",
 				"category": [{
 						"id": 0,
-						"category": "游戏",
+						"category": ["游戏"],
 						"count": 1,
 						"max_count": 5,
 						"source": ["baidu_video"],
@@ -144,7 +144,7 @@
 					},
 					{
 						"id": 1,
-						"category": "漫画",
+						"category": ["漫画"],
 						"count": 1,
 						"max_count": 5,
 						"source": ["baidu_video"],
