--- a/product_env/engine_dopam_baseline_app_setting.json
+++ b/product_env/engine_dopam_baseline_app_setting.json
@@ -6,5 +6,13 @@
     {
         "app": "videoapp1",
         "config": "https://gitee.com/hotpush/configuration/raw/master/product_env/engine_baseline_strategy_dopam.videoapp1.json"
+    },
+    {
+        "app": "daxiguavideo",
+        "config": "https://gitee.com/hotpush/configuration/raw/master/product_env/engine_baseline_strategy_dopam.videoapp1.json"
+    },
+    {
+        "app": "caomeivideo",
+        "config": "https://gitee.com/hotpush/configuration/raw/master/product_env/engine_baseline_strategy_dopam.videoapp1.json"
     }
 ]
