update product_env/engine_dopam_baseline_app_setting.json. 支持百度appid配置 增加今日新鲜事

--- a/product_env/engine_dopam_baseline_app_setting.json
+++ b/product_env/engine_dopam_baseline_app_setting.json
@@ -1,18 +1,27 @@
 [
     {
         "app": "xwzzd",
+        "use_baidu_appid": "c951374c",
         "config": "https://gitee.com/hotpush/configuration/raw/master/product_env/engine_baseline_strategy_dopam.xwzzd.json"
     },
     {
+        "app": "jrxxs",
+        "use_baidu_appid": "c951374c",
+        "config": "https://gitee.com/hotpush/configuration/raw/master/product_env/engine_baseline_strategy_dopam.jrxxs.json"
+    },
+    {
         "app": "videoapp1",
+        "use_baidu_appid": "dcad7fa9",
         "config": "https://gitee.com/hotpush/configuration/raw/master/product_env/engine_baseline_strategy_dopam.videoapp1.json"
     },
     {
         "app": "daxiguavideo",
+        "use_baidu_appid": "dcad7fa9",
         "config": "https://gitee.com/hotpush/configuration/raw/master/product_env/engine_baseline_strategy_dopam.videoapp1.json"
     },
     {
         "app": "caomeivideo",
+        "use_baidu_appid": "dcad7fa9",
         "config": "https://gitee.com/hotpush/configuration/raw/master/product_env/engine_baseline_strategy_dopam.videoapp1.json"
     }
 ]
