--- a/product_env/engine_dopam_baseline_app_setting.json
+++ b/product_env/engine_dopam_baseline_app_setting.json
@@ -23,5 +23,10 @@
         "app": "caomeivideo",
         "use_baidu_appid": "dcad7fa9",
         "config": "https://gitee.com/hotpush/configuration/raw/master/product_env/engine_baseline_strategy_dopam.videoapp1.json"
+    },
+    {
+        "app": "xiangfuvideo",
+        "use_baidu_appid": "dcad7fa9",
+        "config": "https://gitee.com/hotpush/configuration/raw/master/product_env/engine_baseline_strategy_dopam.xiangfuvideo.json"
     }
 ]
